# datablok

./: .gitignore  Cargo.toml  LICENSE  README.md  contacts.parquet  example.parquet
.cargo/: config.toml
crates/hello-datafusion/: Cargo.toml  README.md
crates/hello-datafusion/src/: main.rs
crates/parquet-embed-tantivy/: Cargo.toml  README.md
crates/parquet-embed-tantivy/src/: common.rs  directory.rs  doc.rs  index.rs  lib.rs  main.rs  paths.rs  query.rs  query_session.rs  writer.rs
crates/parquet-embed-tantivy/src/custom_index/: data_block.rs  file_metadata.rs  file_slice.rs  header.rs  manifest.rs  mod.rs
crates/parquet-embed-tantivy/src/data_generator/: mod.rs  title.rs  words.rs
crates/parquet-embed-tantivy/tests/: common.rs  doc_mapper.rs  embedded_index.rs  full_text_search.rs  header_roundtrip.rs  index_equivalence.rs
crates/parquet-embed-tantivy/tests/common/: mod.rs
crates/parquet-nested-basic/: Cargo.toml  README.md
crates/parquet-nested-basic/src/: main.rs
crates/parquet-nested-parallel/: Cargo.toml  README.md
crates/parquet-nested-parallel/benches/: datagen.rs  pipeline.rs
crates/parquet-nested-parallel/report_apple_m3_dev/: criterion_comparison.txt
crates/parquet-nested-parallel/report_linux_amd/: Cargo.toml.good-version  hyperfine_summary_collated.md  log.txt  run_all_benchmarks.sh
crates/parquet-nested-parallel/report_linux_amd/01-2025-06-30-e702a65/: hyperfine_results.json  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/01-2025-07-01-836d17f/: hyperfine_results.json  hyperfine_summary.md  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/02-2025-07-01-836d17f/: hyperfine_results.json  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/02-2025-07-01-cfb792f/: hyperfine_results.json  hyperfine_summary.md  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/03-2025-07-01-94a0d92/: hyperfine_results.json  hyperfine_summary.md  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/03-2025-07-01-cfb792f/: hyperfine_results.json  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/04-2025-07-01-3abe3e6/: hyperfine_results.json  hyperfine_summary.md  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/04-2025-07-01-94a0d92/: hyperfine_results.json  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/05-2025-07-01-3abe3e6/: hyperfine_results.json  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/05-2025-07-01-c6aa5d1/: hyperfine_results.json  hyperfine_summary.md  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/06-2025-07-01-5244ac2/: hyperfine_results.json  hyperfine_summary.md  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/06-2025-07-01-c6aa5d1/: hyperfine_results.json  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/07-2025-07-01-4c727ff/: hyperfine_results.json  hyperfine_summary.md  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/07-2025-07-01-5244ac2/: hyperfine_results.json  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/08-2025-07-01-4c727ff/: hyperfine_results.json  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/08-2025-07-04-e895b92/: hyperfine_results.json  hyperfine_summary.md  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/09-2025-07-04-5693fb2/: hyperfine_results.json  hyperfine_summary.md  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/09-2025-07-04-e895b92/: hyperfine_results.json  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/10-2025-07-04-5693fb2/: hyperfine_results.json  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/10-2025-07-04-de2c44a/: hyperfine_results.json  hyperfine_summary.md  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/11-2025-08-11-da4a725/: hyperfine_results.json  hyperfine_summary.md  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/12-2025-08-14-2f285c1/: hyperfine_results.json  hyperfine_summary.md  perf_stat.txt
crates/parquet-nested-parallel/report_linux_amd/e2e-multi-param-analysis/: run-W1-R100000-B1024.json  run-W1-R100000-B10240.json  run-W1-R100000-B20480.json  run-W1-R100000-B5120.json  run-W1-R1000000-B1024.json  run-W1-R1000000-B10240.json  run-W1-R1000000-B20480.json  run-W1-R1000000-B5120.json  run-W1-R10000000-B1024.json  run-W1-R10000000-B10240.json  run-W1-R10000000-B20480.json  run-W1-R10000000-B5120.json  run-W2-R100000-B1024.json  run-W2-R100000-B10240.json  run-W2-R100000-B20480.json  run-W2-R100000-B5120.json  run-W2-R1000000-B1024.json  run-W2-R1000000-B10240.json  run-W2-R1000000-B20480.json  run-W2-R1000000-B5120.json  run-W2-R10000000-B1024.json  run-W2-R10000000-B10240.json  run-W2-R10000000-B20480.json  run-W2-R10000000-B5120.json  run-W4-R100000-B1024.json  run-W4-R100000-B10240.json  run-W4-R100000-B20480.json  run-W4-R100000-B5120.json  run-W4-R1000000-B1024.json  run-W4-R1000000-B10240.json  run-W4-R1000000-B20480.json  run-W4-R1000000-B5120.json  run-W4-R10000000-B1024.json  run-W4-R10000000-B10240.json  run-W4-R10000000-B20480.json  run-W4-R10000000-B5120.json  run-W6-R100000-B1024.json  run-W6-R100000-B10240.json  run-W6-R100000-B20480.json  run-W6-R100000-B5120.json  (+20 more)
crates/parquet-nested-parallel/src/: contact.rs  datagen.rs  lib.rs  main.rs  pipeline.rs  skew.rs
crates/parquet-nested-parallel/tests/: pipeline.rs
crates/parquet-nested-parallel/visualizations/: parsed_perf_data.json
crates/parquet-nested-parallel/visualizations/archived/2025-09-01/perf/: parsed_perf_data.json
crates/parquet-parallel-nested/: Cargo.toml  README.md
crates/parquet-parallel-nested/benches/: datagen.rs
crates/parquet-parallel-nested/src/: contact.rs  datagen.rs  generator.rs  lib.rs  main.rs  skew.rs
crates/tantivy-byte-array-index/: Cargo.toml  README.md
crates/tantivy-byte-array-index/src/: common.rs  config.rs  doc.rs  error.rs  index.rs  indexer.rs  main.rs  query.rs  query_session.rs
doodles/hello-parquet/: Cargo.toml
scripts/: collate_hyperfine.py  (+11 more)
(+21 files in other folders)
