[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.dependencies]

[profile.release]
debug = "line-tables-only"
debuginfo-level = 1
strip = false # Retain debug info for flamegraphs

[build]
rustflags = ["-C", "force-frame-pointers=yes", "-C", "symbol-mangling-version=v0"] # Frame pointers, symbol demangling