[package]
name = "hello-datafusion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
datafusion = { git = "https://github.com/apache/arrow-datafusion.git", version = "48.0.0", default-features = false }
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
