[package]
name = "parquet-embed-tantivy"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.11.8" }
log = { version = "0.4.27" }
tantivy = { version = "0.24.1", default-features = false }
once_cell = "1.21.3"
thiserror = "2.0.12"
crc32fast = "1.4.2"
stable_deref_trait = "1.2.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
datafusion-common = { version = "48.0.1", default-features = false }
parquet = { version = "55.2.0", default-features = false, features = ["arrow"] }
datafusion-catalog = { version = "48.0.1", default-features = false }
datafusion-expr = { version = "48.0.1", default-features = false }
datafusion-physical-plan = { version = "48.0.1", default-features = false }
datafusion-execution = { version = "48.0.1", default-features = false }
datafusion-datasource-parquet = { version = "48.0.1", default-features = false }
datafusion-datasource = { version = "48.0.1", default-features = false }
async-trait = "0.1.88"
datafusion = { version = "48.0.1", default-features = false }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
rand = "0.9.2"
