[package]
name = "parquet-nested-parallel"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
fake = "4.3.0"
human_format = "1.1.0"
log = "0.4.27"
parquet-nested-common = { version = "0.1.0", path = "../parquet-nested-common" }
rayon = { version = "1.10.0", default-features = false }
arrow = { version = "55.0.0", default-features = false, features = ["prettyprint"] }
parquet = { version = "55.0.0", default-features = false, features = ["arrow"] }
dhat = { version = "0.3.3", optional = true }
rand = { version = "0.9.1" }

[features]
dhat-heap = ["dep:dhat"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "datagen"
harness = false
