[package]
name = "tantivy-byte-array-index"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { version = "0.11.8" }
log = { version = "0.4.27" }
tantivy = { version = "0.24.1", default-features = false }
once_cell = "1.21.3"
thiserror = "2.0.12"
crc32fast = "1.4.2"
stable_deref_trait = "1.2.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
datafusion-common = { version = "48.0.1", default-features = false }
