[package]
name = "hello-parquet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arrow = { version = "55.1.0", default-features = false }
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
parquet = { version = "55.1.0", features = ["arrow"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
